# lite

./: .gitignore  Cargo.toml  Makefile  README.id.md  README.md
completions/: _lite  lite.bash  lite.fish
lite-config/: Cargo.toml
lite-config/src/: config.rs  keymap.rs  lib.rs  theme.rs
lite-core/: Cargo.toml
lite-core/src/: grapheme.rs  lib.rs  position.rs  rope_ext.rs  selection.rs  transaction.rs
lite-git/: Cargo.toml
lite-git/src/: lib.rs
lite-lsp/: Cargo.toml
lite-lsp/src/: lib.rs
lite-term/: Cargo.toml
lite-term/src/: application.rs  commands.rs  event.rs  lib.rs  main.rs
lite-ui/: Cargo.toml
lite-ui/src/: compositor.rs  editor_view.rs  helpbar.rs  lib.rs  prompt.rs  statusline.rs  tabline.rs
lite-view/: Cargo.toml
lite-view/src/: document.rs  editor.rs  history.rs  lib.rs  syntax.rs  tree.rs  view.rs
lite-view/src/queries/: bash.scm  c.scm  cpp.scm  css.scm  go.scm  html.scm  javascript.scm  json.scm  markdown.scm  python.scm  rust.scm  typescript.scm
man/: lite.1
scripts/: install.sh  lite.desktop  uninstall.sh
