[workspace]
resolver = "2"
members = [
    "lite-core",
    "lite-view",
    "lite-lsp",
    "lite-git",
    "lite-term",
    "lite-ui",
    "lite-config",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Irfan"]
repository = "https://github.com/IrfanArsyad/lite"

[workspace.dependencies]
# Internal crates
lite-core = { path = "lite-core" }
lite-view = { path = "lite-view" }
lite-lsp = { path = "lite-lsp" }
lite-git = { path = "lite-git" }
lite-term = { path = "lite-term" }
lite-ui = { path = "lite-ui" }
lite-config = { path = "lite-config" }

# Text buffer
ropey = "1.6"

# TUI
ratatui = { version = "0.29", features = ["serde"] }
crossterm = "0.28"

# Syntax highlighting
tree-sitter = "0.24"

# LSP
lsp-types = "0.97"

# Git
git2 = "0.19"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Fuzzy matching
nucleo = "0.5"

# Unicode
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1"
parking_lot = "0.12"
smallvec = "1.13"
directories = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
