[package]
name = "lite-config"
description = "Configuration and themes for lite editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
directories.workspace = true
once_cell.workspace = true
thiserror.workspace = true
ratatui.workspace = true
