[package]
name = "lite-lsp"
description = "LSP client implementation for lite editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lite-core.workspace = true
lsp-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
