[package]
name = "lite-view"
description = "Editor state and view management for lite editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lite-core.workspace = true
lite-config.workspace = true
ropey.workspace = true
smallvec.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
