[package]
name = "lite-view"
description = "Editor state and view management for lite editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lite-core.workspace = true
lite-config.workspace = true
ropey.workspace = true
smallvec.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-json.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-md.workspace = true
once_cell.workspace = true
streaming-iterator = "0.1"
